--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+* {
+  padding: 0px;
+  margin: 0px;
+}
 
 $base-color: #295bff;
 
-$white: mix(white, $base-color, 80%);
-$black: mix(black, $base-color, 80%);
+$white: mix(white, $base-color, 95%);
+$black: mix(black, $base-color, 90%);
 $gray: mix(#636363, $base-color, 80%);
 $base-light-10: lighten($base-color, 10%);
 $base-light-20: lighten($base-color, 20%);
@@ -10,12 +16,114 @@ $base-dark-10: darken($base-color, 10%);
 $base-dark-20: darken($base-color, 20%);
 $green-gradient: linear-gradient(315deg, hsla(164, 38%, 18%, 1) 0%, hsla(158, 77%, 77%, 1) 100%);
 
-body {
-  margin:0;
-
+html, #root, .body{
+  height: 100%;
 }
 
-h1 {
-  color: $base-color;
-  background-color: $gray;
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  // overflow-x: hidden;
+  background-color: #1B2240;
+  color: $white;
+  font-size: 20px;
+  height: 100%;
+}
+
+#bg-L {
+  z-index: -1;
+  position: absolute;
+  right: 0;
+  width: 100vw;
+  height: 100%;
+  // background: linear-gradient(95deg, rgb(255, 255, 255) 80%, rgb(167, 181, 255) 100%);
+}
+
+.navbar {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  font-size: 17px;
+  height: 55px;
+  margin-bottom: 10px;
+  background-color: white;
+  
+  #logo {
+    height: 51px;
+    background-color: RoyalBlue;
+    align-self: auto;
+    // border: 1px solid $black;
+  }
+  .links {
+    
+    .nav-link {
+      padding: 20px;
+      display: inline-block;
+      color: $gray;
+      text-align: center;
+      text-decoration: none;
+    }
+    
+    #login {
+
+    }
+  }
+}
+
+#main-content {
+  margin: 5px 0px;
+  padding: 3px 0px;
+  width: 100vw;
+  height: 85%;
+  display: grid; 
+  // align-items: center;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr; 
+  grid-template-rows: 1fr 1fr; 
+  gap: 0px 0px; 
+  grid-template-areas: 
+    "left-1 code-output"
+    "left-2 code-output"; 
+
+  .left-1 { 
+    grid-area: left-1; 
+    background-color: $white;
+    color: $gray;
+    width: 80%;
+    height: 80%;
+    border-radius: 20px;
+    box-shadow: 6px 5px 2px 1px rgb(0, 0, 0);
+    padding: 5px;
+  }
+
+  .left-2 { 
+    grid-area: left-2; 
+    background-color: $white;
+    color: $gray;
+    width: 80%;
+    height: 80%;
+    border-radius: 20px;
+    box-shadow: 6px 5px 2px 1px rgb(0, 0, 0);
+    padding: 5px;
+  }
+
+  .codeOutput { 
+    box-shadow: 6px 5px 2px 1px rgb(0, 0, 0);
+    border-radius: 20px;
+    background-color: $white;
+    width: 45vw;
+    grid-area: code-output; 
+    padding: 5px;
+  }
+}
+
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
