--- a/client/styles.scss
+++ b/client/styles.scss
@@ -79,7 +79,8 @@ body {
       text-decoration: none;
       z-index: 6;
       // overflow: hidden;
-      &:before, &:after{
+      &:before,
+      &:after {
         content: '';
         position: absolute;
         display: block;
@@ -88,22 +89,22 @@ body {
         top: 0;
         left: 0;
       }
-      &:after{
+      &:after {
         width: 100%;
         height: 100%;
-        background:  $base-color;
+        background: $base-color;
         mix-blend-mode: lighten;
         transition: all 0.3s ease;
         transform-origin: center;
         transform: scale(0);
       }
-      &:hover:after{
+      &:hover:after {
         transform: scale(1);
       }
       transition: 0.5s;
       &:hover {
         color: #fff;
-      } 
+      }
     }
   }
 }
@@ -115,15 +116,17 @@ body {
   border: 3px solid $base-light-20;
   background-color: #1b2240;
   letter-spacing: 0.5px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  #close-icon{
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  z-index: 10;
+  #close-icon {
     position: absolute;
     right: 10px;
     top: 10px;
     color: black;
     cursor: pointer;
   }
-  #close-icon:hover{
+  #close-icon:hover {
     color: $base-color;
   }
   #input-modal-container {
@@ -178,51 +181,59 @@ body {
   width: 100vw;
   height: 85%;
   display: grid;
-  // align-items: center;
-  justify-items: center;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 0px 0px;
-  grid-template-areas:
-    'left-1 code-output'
-    'left-2 code-output';
+  grid-template-columns: 0.5fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 0px;
 
   .left-1 {
-    grid-area: left-1;
-    background-color: $white;
-    color: $gray;
-    width: 80%;
-    height: 80%;
-    border-radius: 20px;
-    box-shadow: 6px 5px 2px 1px rgb(0, 0, 0);
-    padding: 5px;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    grid-area: 1 / 1 / 2 / 2;
+    padding: 8px;
+    height: 80vh;
+    h2 {
+      color: white;
+      text-align: center;
+    }
+    #uri-input-container {
+      display: flex;
+      flex-direction: column;
+      input {
+        color: black;
+        font-weight: 400;
+        padding: 5px;
+      }
+    }
   }
 
   .left-2 {
-    grid-area: left-2;
     background-color: $white;
     color: $gray;
-    width: 80%;
-    height: 80%;
     border-radius: 20px;
     box-shadow: 6px 5px 2px 1px rgb(0, 0, 0);
     padding: 5px;
   }
 
+  #zoom-controls-container {
+    display: flex;
+    justify-content: flex-end;
+  }
+
   .codeOutput {
-    box-shadow: 6px 5px 2px 1px rgb(0, 0, 0);
-    border-radius: 20px;
-    background-color: $white;
-    width: 45vw;
-    grid-area: code-output;
-    padding: 5px;
-    color: black;
+    font-size: 20px;
+    min-height: 80vh;
+    background-color: rgba(29, 29, 29, 0.898);
+    width: 55vw;
+    grid-area: 1 / 2 / 2 / 3;
   }
 }
 
 #about {
   .app-description {
-
     // box-shadow: 6px 5px 2px 1px rgb(0, 0, 0);
     border-radius: 20px;
     background-color: white;
@@ -240,23 +251,23 @@ body {
   }
 
   .bro-container {
-    display: grid; 
-    grid-template-columns: 1.4fr 1.4fr; 
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
-    gap: 0px 16px; 
-    grid-template-areas: 
-      "about1 ."
-      "about1 ."
-      "about1 about2"
-      ". about2"
-      "about3 about2"
-      "about3 ."
-      "about3 about4"
-      ". about4"
-      "about5 about4"
-      "about5 ."
-      "about5 ."; 
-    align-content: center; 
+    display: grid;
+    grid-template-columns: 1.4fr 1.4fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 0px 16px;
+    grid-template-areas:
+      'about1 .'
+      'about1 .'
+      'about1 about2'
+      '. about2'
+      'about3 about2'
+      'about3 .'
+      'about3 about4'
+      '. about4'
+      'about5 about4'
+      'about5 .'
+      'about5 .';
+    align-content: center;
 
     .about-box {
       background-color: #fff;
@@ -264,13 +275,23 @@ body {
       width: 500px;
     }
 
-    color:#fff;
+    color: #fff;
 
-    .about-1 { grid-area: about1; }
-    .about-2 { grid-area: about2; }
-    .about-3 { grid-area: about3; }
-    .about-4 { grid-area: about4; }
-    .about-5 { grid-area: about5; }
+    .about-1 {
+      grid-area: about1;
+    }
+    .about-2 {
+      grid-area: about2;
+    }
+    .about-3 {
+      grid-area: about3;
+    }
+    .about-4 {
+      grid-area: about4;
+    }
+    .about-5 {
+      grid-area: about5;
+    }
   }
 }
 
@@ -288,11 +309,15 @@ body {
 }
 
 @keyframes fadeEffect {
-  from {opacity: 0;}
-  to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .demo {
-  font-family: "Fira Code", monospace;
-  grid-area: left-2; 
+  font-family: 'Fira Code', monospace;
+  grid-area: left-2;
 }
