more dropdown options above code generation and boilerplate code generation partially built out

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -296,3 +296,8 @@ body {
   font-family: "Fira Code", monospace;
   grid-area: left-2; 
 }
+
+.dropDownMenus {
+  display: flex;
+  flex-direction: row;
+}
