--- a/client/styles/codeBlock.scss
+++ b/client/styles/codeBlock.scss
@@ -1,13 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100,200&display=swap');
-@import url(https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.206/distr/fira_code.css);
-@import url(https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css);
-
-* {
-  padding: 0px;
-  margin: 0px;
-}
-
 $base-color: #295bff;
 
 $white: mix(white, $base-color, 95%);
@@ -23,23 +13,63 @@ $green-gradient: linear-gradient(
   hsla(158, 77%, 77%, 1) 100%
 );
 
+$codeGray: rgb(29,31,33);
 
 .codeDiv {
+  height: 100%;
+  padding: 0;
+  margin: 0;
   background-color: #b8c5d6;
   display: flex;
   flex-direction: column;
   position: relative;
 
   #code-header {
-    padding: 5px;
-    background-color: #1b2240; //#1D1F21
-    border-radius: 0px;
+    background-color: rgb(0, 71, 134); //#1D1F21
+    border-radius: 6px 6px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    
+
+    // Button tabs container
+    #tabs {
+      display: flex;
+      height: 53%;
+      margin: 0px 20px;
+
+      // Default for when button is active:
+      button {
+        width: 130px;
+        border-radius: 8px 8px 0 0;
+        padding: 7px 10px 10px 10px;
+        margin: 0px 2px;
+        background-color: $codeGray;
+      }
+      // When button is not active:
+      .not-active {
+        background-color: lighten($codeGray, 30%);
+        transition: .5s;
+        &:hover {
+          background-color: lighten($codeGray, 15%);
+        }
+      }
+    }
+
+    form {
+      padding: 5px;
+    }
+
+    div {
+      padding: 5px;
+    }
   }
   
   #codeOutput {
     display: flex;
     flex-direction: column;
-    font-size: 20px;
+    font-size: 15px;
     background-color:white;
     flex-grow: 1;
     
@@ -49,28 +79,23 @@ $green-gradient: linear-gradient(
       border-radius: 0px;
     }
   }
-}
-
-#zoom-controls-container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  z-index: 100;
+  // Zoom in and zoom out buttons
+  #zoom-controls-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    z-index: 100;
+    
+    svg {
   
-  svg {
-
-    &:hover {
-      cursor: pointer;
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
-}
-
-.demo {
-  font-family: 'Fira Code', monospace;
-  grid-area: left-2;
-}
-
-.dropDownMenus {
-  display: flex;
-  flex-direction: row;
+  
+  .demo {
+    font-family: 'Fira Code', monospace;
+    grid-area: left-2;
+  }
 }
