--- a/client/styles/mainPage.scss
+++ b/client/styles/mainPage.scss
@@ -13,15 +13,7 @@ $base-color: #295bff;
 $white: mix(white, $base-color, 95%);
 $black: mix(black, $base-color, 90%);
 $gray: mix(#636363, $base-color, 80%);
-$base-light-10: lighten($base-color, 10%);
-$base-light-20: lighten($base-color, 20%);
-$base-dark-30: darken($base-color, 30%);
-$base-dark-20: darken($base-color, 20%);
-$green-gradient: linear-gradient(
-  315deg,
-  hsla(164, 38%, 18%, 1) 0%,
-  hsla(158, 77%, 77%, 1) 100%
-);
+
 
 
 html,
@@ -56,7 +48,7 @@ body {
   margin: 0px 30px;
   padding: 3px 0px;
   width: auto;
-  height: 85%;
+  height: 90%;
   display: grid;
   grid-template-columns: 0.5fr 1fr;
   grid-template-rows: 1fr;
@@ -79,18 +71,26 @@ body {
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 
-    #steps-list {
-      text-align: center;
-    }
     h1{
       font-size: 2rem;
       text-decoration: underline;
       color: #1b2240;
     }
-    h2 {
-      text-align:center;
-      color: #1b2240;
+    #instructions {
+      height: 220px;
+      width: 90%;
+      padding: 5px;
+      h2 {
+        margin: 8px;
+        text-align: left;
+        color: #1b2240;
+      }
+      .gray {
+        color: mix(#1b2240, gray, 20%);
+        font-size: 15px;
+      }
     }
+
     #circles-container {
       display: flex;
       align-items: center;
@@ -105,7 +105,7 @@ body {
       margin: 0px 20px;
       width: 50px;
       height: 50px;
-      border: 1px solid #1b2240;
+      border: 3px solid #1b2240;
       border-radius: 50%;
       box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     }
@@ -114,11 +114,14 @@ body {
     }
 
     #uri-input-container {
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
+      align-items: center;
       
       input {
+        width: 100%;
         color: black;
         font-weight: 400;
         padding: 5px;
@@ -128,18 +131,19 @@ body {
 
       }
       button {
-        &:hover {
-          border-color:#36416f; 
-          background-color: #36416f;
-          color: orange;
-        }
-        
+        width: 80%;
         background-color: #1b2240;
         color: white;
         border: 3px solid #1b2240;
         border-radius: 5px;
         padding: 5px;
         z-index: 0;
+        
+        &:hover {
+          border-color:#36416f; 
+          background-color: #36416f;
+          color: orange;
+        }
       }
     }
   }
