Changed some frontpage formatting

--- a/client/styles/navBar.scss
+++ b/client/styles/navBar.scss
@@ -23,7 +23,7 @@ $green-gradient: linear-gradient(
   height: 50px;
   padding: 0px 30px;
   margin-bottom: 20px;
-  background-color: white;
+  background-color: #F0F7EE;
   z-index: 5;
   #logo {
     height: 45px;
