--- a/client/styles/codeBlock.scss
+++ b/client/styles/codeBlock.scss
@@ -19,10 +19,11 @@ $codeGray: rgb(29,31,33);
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: #b8c5d6;
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow-x: hidden;
+  border-radius: 6px;
 
   #code-header {
     background-color: rgb(0, 71, 134); //#1D1F21
@@ -72,6 +73,7 @@ $codeGray: rgb(29,31,33);
     font-size: 15px;
     background-color:white;
     flex-grow: 1;
+    border-radius: 0px 0px 6px 6px ;
     
     div {
       height: 100%;
