--- a/client/styles/mainPage.scss
+++ b/client/styles/mainPage.scss
@@ -29,6 +29,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  font-weight: 700;
   // overflow-x: hidden;
   background-color: white;
   color: $white;
