--- a/client/styles/mainPage.scss
+++ b/client/styles/mainPage.scss
@@ -139,6 +139,7 @@ body {
         border-radius: 5px;
         padding: 5px;
         z-index: 0;
+        margin: 5px;
         
         &:hover {
           border-color:#36416f; 
