--- a/client/styles/aboutPage.scss
+++ b/client/styles/aboutPage.scss
@@ -1,9 +1,4 @@
-$base-color: #295bff;
-
-$white: mix(white, $base-color, 95%);
-$black: mix(black, $base-color, 90%);
-$gray: mix(#636363, $base-color, 80%);
-
+@import 'variables';
 
 #about {
   font-family: 'Raleway', sans-serif;
@@ -45,7 +40,7 @@ $gray: mix(#636363, $base-color, 80%);
           position : absolute;
           width : 100%;
           height : 2px;
-          background-color: rgb(0, 187, 255);
+          background-color: $lightBlue;
           bottom: 0;
           left: 0;
           transition : transform 0.25s linear;
