--- a/client/styles/mountainLogo.scss
+++ b/client/styles/mountainLogo.scss
@@ -1,17 +1,4 @@
-$base-color: #295bff;
-
-$white: mix(white, $base-color, 95%);
-$black: mix(black, $base-color, 90%);
-$gray: mix(#636363, $base-color, 80%);
-$base-light-10: lighten($base-color, 10%);
-$base-light-20: lighten($base-color, 20%);
-$base-dark-30: darken($base-color, 30%);
-$base-dark-20: darken($base-color, 20%);
-$green-gradient: linear-gradient(
-  315deg,
-  hsla(164, 38%, 18%, 1) 0%,
-  hsla(158, 77%, 77%, 1) 100%
-);
+@import 'variables';
 
 #blur-container {
   height: 100%;
@@ -62,26 +49,26 @@ $size: 40%;
   $start: 356.781px;
   $end: 713.562px;
   
-  0%{stroke-dashoffset:$start;
-    stroke-dasharray:$start;
-    stroke-opacity:1}
-  35%{stroke-dashoffset:$end;
-    stroke-dasharray:$start;
-    stroke-opacity:1}
-  90%{stroke-dashoffset:$end;
-    stroke-dasharray:$start;
-    stroke-opacity:1}
-  100%{stroke-dashoffset:$end;
-    stroke-dasharray:$start;
-    stroke-opacity:0}
+  0%{stroke-dashoffset: $start;
+    stroke-dasharray: $start;
+    stroke-opacity: 1}
+  35%{stroke-dashoffset: $end;
+    stroke-dasharray: $start;
+    stroke-opacity: 1}
+  90%{stroke-dashoffset: $end;
+    stroke-dasharray: $start;
+    stroke-opacity: 1}
+  100%{stroke-dashoffset: $end;
+    stroke-dasharray: $start;
+    stroke-opacity: 0}
 };
 
 @keyframes animate-mountain-fill{
-  0%{fill:transparent}
-  35%{fill:transparent}
-  50%{fill:rgb(20,93,160)}
-  90%{fill:rgb(20,93,160)}
-  100%{fill:transparent}
+  0%{fill: transparent}
+  35%{fill: transparent}
+  50%{fill: $anim-blue}
+  90%{fill: $anim-blue}
+  100%{fill: transparent}
 }
 
 @keyframes animate-snow-fill {
@@ -120,18 +107,18 @@ $size: 40%;
 
   0% {stroke-dashoffset: $start;
     stroke-dasharray: $start;
-    stroke-opacity:1}
+    stroke-opacity: 1}
   40% {stroke-dashoffset: $start;
     stroke-dasharray: $start}
   65% {stroke-dashoffset: $end;
     stroke-dasharray: $start}
   90% {stroke-dashoffset: $end;
     stroke-dasharray: $start;
-    stroke-opacity:1}
+    stroke-opacity: 1}
   98% {stroke-dashoffset: $end;
     stroke-dasharray: $start; 
     stroke-opacity: 0}
   100% {stroke-dashoffset: $end;
     stroke-dasharray: $start;
-    stroke-opacity:0}
+    stroke-opacity: 0}
 }
