all functionality for saving and sellecting DBS, backend needs to convert DBname to DBURI

--- a/client/styles/mainPage.scss
+++ b/client/styles/mainPage.scss
@@ -119,7 +119,9 @@ body {
         margin-bottom: 10px;
         border: 2px solid #1b2240;
         border-radius: 5px;
-
+      }
+      select {
+        color: black;
       }
       button {
         width: 80%;
