Saving databases is completed, need to verify uri
Co-authored-by: Jordan Williams <JordanOBL@users.noreply.github.com>
Co-authored-by: Roy Jiang <rjiang12@users.noreply.github.com>
Co-authored-by: t1ho <t1ho@users.noreply.github.com>
Co-authored-by: Zachrobdev <Zachrobdev@users.noreply.github.com>

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -17,7 +17,7 @@ $beige: #F0F7EE;
 $codeGray: rgb(29,31,33);
 
 $lightBlue: rgb(0, 187, 255);
-$purple: rgb(0, 71, 134);
+$blue: rgb(0, 71, 134);
 $orange: orange;
 
 $anim-blue: rgb(20,93,160);
