--- a/client/styles/codeBlock.scss
+++ b/client/styles/codeBlock.scss
@@ -11,7 +11,7 @@
   border-radius: 6px;
 
   #code-header {
-    background-color: $purple; //#1D1F21
+    background-color: $blue; //#1D1F21
     border-radius: 6px 6px 0px 0px;
     display: flex;
     flex-direction: row;
