--- a/client/styles/saveDatabaseModal.scss
+++ b/client/styles/saveDatabaseModal.scss
@@ -2,22 +2,35 @@
 
 .save-database-modal-container {
   position: absolute;
-  width: 300px;
-  height: 375px;
+  width: 270px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   border: 3px solid $base-light-20;
-  background-color: #1b2240;
+  background-color: rgb(0, 52, 116);
   letter-spacing: 0.5px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 15px 12px;
   z-index: 1000;
   color: black;
-    label {
-      color: black;
+
+    #close-icon {
+      align-self: end;
+      margin: 3px 3px 0 0;
     }
+
+    label {
+      font-weight: 300;
+      color: rgb(255, 255, 255);
+    }
+
     input {
       padding: 10px;
       margin: 5px;
     }
+
     #save-btn {
       padding: 5px;
       width: 150px;
@@ -26,15 +39,16 @@
       background-color: $base-light-20;
       border-color: $base-light-20;
       border-radius: 5px;
-      color: black;
+      color: rgb(255, 255, 255);
       margin: 10px;
-      font-size: medium;
-      font-weight: 600;
-    }
-    #save-btn:hover {
-      background-color: $base-color;
-      border-color: $base-color;
-      color: white;
+      font-size: larger;
+      font-weight: 300;
+      
+      &:hover {
+        background-color: $base-color;
+        border-color: $base-color;
+        color: white;
+      }
     }
     
   }
