Added boilerplate instructions + Last URI in stats

--- a/client/styles/mainPage.scss
+++ b/client/styles/mainPage.scss
@@ -149,8 +149,11 @@ body {
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     padding: 10px;
-    width: 300px;
+    width: 95%;
+    max-width: 400px;
+    word-wrap: break-word;
     height: 100px;
+    overflow-y: scroll;
   }
 
   #disabled-save {
