Fix CodeBlock formatting

--- a/client/styles/mainPage.scss
+++ b/client/styles/mainPage.scss
@@ -147,6 +147,7 @@ body {
     color: $gray;
     border: 1px solid #1b2240;
     border-radius: 5px;
+    font-size: x-small;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     padding: 10px;
     width: 95%;
