--- a/client/styles/codeBlock.scss
+++ b/client/styles/codeBlock.scss
@@ -53,7 +53,7 @@
     }
   }
   
-  #codeOutput {
+  #code-output {
     display: flex;
     flex-direction: column;
     font-size: 15px;
@@ -61,8 +61,12 @@
     flex-grow: 1;
     border-radius: 0px 0px 6px 6px ;
 
-    border-radius: 0px;
-    
+    .dQHzGr {
+      height: 100%;
+      padding: 6px;
+      border-radius: 0px;
+    }
+
   }
   // Zoom in and zoom out buttons
   #zoom-controls-container {
