--- a/client/styles/codeBlock.scss
+++ b/client/styles/codeBlock.scss
@@ -61,7 +61,7 @@
     flex-grow: 1;
     border-radius: 0px 0px 6px 6px ;
 
-    .dQHzGr {
+    >div {
       height: 100%;
       padding: 6px;
       border-radius: 0px;
